--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.14.2",
     "ejs": "^2.4.1",
     "express": "^4.13.4",
+    "querystring": "^0.2.0",
     "request": "^2.69.0"
   }
 }
